--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "rewrites": [
     {
-      "source": "/((?!.*\\.).*)$",
+      "source": "/(.*\\.(?!html$|svg$|png$|jpg$|jpeg$|gif$|ico$|css$|js$|json$|woff$|woff2$|ttf$|eot$).*)",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/((?!.*\\.[^.]+$).*)",
       "destination": "/index.html"
     }
   ],
@@ -15,7 +19,7 @@
         },
         {
           "key": "X-Frame-Options",
-          "value": "DENY"
+          "value": "SAMEORIGIN"
         },
         {
           "key": "X-XSS-Protection",
