--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,17 @@
 {
   "rewrites": [
     {
-      "source": "/(.*\\.(?!html$|svg$|png$|jpg$|jpeg$|gif$|ico$|css$|js$|json$|woff$|woff2$|ttf$|eot$).*)",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/((?!.*\\.[^.]+$).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/assets/(.*)",
       "headers": [
         {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
